loopfor.LoopFor.scala.code
for (compteur <-1 to n) {
  forward();
}
prendBiscuit();
